# khez

./: CMakeLists.txt  README.md
src/: bitboard.cpp  bitboard.h  board.cpp  board.h  chess_board.cpp  chess_board.h  main.cpp  masks.cpp  masks.h
src/bitboard/: bitboard.cpp  bitboard.h
src/chessboard/: chessboard-status.cpp  chessboard-status.h  chessboard.cpp  chessboard.h
src/engine/: engine.cpp  engine.h
src/engine/chessboard/: chessboard-status.h  chessboard.cpp  chessboard.h  piece.h
src/engine/masks/: masks.cpp  masks.h
src/engine/move/: move.cpp  move.h
src/lib/: color.h  logger.cpp  logger.h  magic.cpp  magic.h  masks.cpp  masks.h  move.cpp  move.h  piece.h  random.cpp  random.h  sliding-piece.h  square.cpp  square.h
src/lib/args/:  command-line-args.cpp   command-line-args.h
src/lib/logger/: logger.cpp
src/magic/: magic.cpp  magic.h
tests/: test_bitboard.cpp  test_board.cpp  test_chess_board.cpp  test_chessboard.cpp  test_engine.cpp  test_lib.cpp  test_lib.h  test_main.cpp  test_move.cpp
